gccida/g1/get_attr_pent_prefix
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_pent_prefix/src/insn-attrtab.c:19729:1: error: must use 'enum' tag to refer to type 'attr_pent_prefix'
attr_pent_prefix  get_attr_pent_prefix( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_pent_prefix/src/insn-attrtab.c:19732:1: error: must use 'enum' tag to refer to type 'attr_pent_prefix'
attr_pent_prefix result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_pent_prefix/src/insn-attrtab.c:19749:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_pent_prefix/src/insn-attrtab.c:19754:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 19810, "get_attr_pent_prefix"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_pent_prefix/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_pent_prefix/src/insn-attrtab.c:19754:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 19810, "get_attr_pent_prefix"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_pent_prefix/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_pent_prefix/src/insn-attrtab.c:20075:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( aligned_operand( recog_data_0.operand[1], HImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_pent_prefix/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_pent_prefix/src/insn-attrtab.c:20114:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v4 = q_regs_operand( recog_data_0.operand[0], QImode); 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_pent_prefix/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_pent_prefix/src/obj/insn-attrtab.o] Error 1
